StickySessionUi/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stickysessionui
  labels:
    app: stickysessionui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stickysessionui
  template:
    metadata:
      labels:
        app: stickysessionui
    spec:
      containers:
        - name: stickysessionui
          image: sticky_session_ui:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 15
