StickySessionUi/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stickysessionui
spec:
  selector:
    app: stickysessionui
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
